--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -67,6 +67,10 @@ dependencies:
     version: ~0.2.11
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     condition: aac-manage-case-assignment.enabled
+  - name: am-org-role-mapping-service
+    version: 0.0.50
+    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
+    condition: am-org-role-mapping-service.enabled
 # WA
   - name: camunda-bpm
     version: 0.0.28
