--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -177,10 +177,10 @@ am-org-role-mapping-service:
       LAUNCH_DARKLY_ENV: pr
       AMQP_SHARED_ACCESS_KEY_NAME: RootManageSharedAccessKey
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
-      CRD_SUBSCRIPTION_NAME: "{{ .Release.Name}}-crd-topic"
-      JRD_SUBSCRIPTION_NAME: "{{ .Release.Name}}-jrd-topic"
-      CRD_TOPIC_NAME: "{{ .Release.Name}}-crd-topic"
-      JRD_TOPIC_NAME: "{{ .Release.Name}}-jrd-topic"
+      CRD_SUBSCRIPTION_NAME: "{{ .Release.Name}}-servicebus-crd-topic"
+      JRD_SUBSCRIPTION_NAME: "{{ .Release.Name}}-servicebus-jrd-topic"
+      CRD_TOPIC_NAME: "{{ .Release.Name}}-servicebus-crd-topic"
+      JRD_TOPIC_NAME: "{{ .Release.Name}}-servicebus-jrd-topic"
       AMQP_CRD_SHARED_ACCESS_KEY_VALUE: "$(SB_ACCESS_KEY)"
       AMQP_JRD_SHARED_ACCESS_KEY_VALUE: "$(SB_ACCESS_KEY)"
       ORG_ROLE_MAPPING_DB_HOST: ${SERVICE_NAME}-postgresql
