Added role to ccd-definition-importer

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -655,6 +655,7 @@ ccd:
       - caseworker-sscs-pcqextractor
       - caseworker-sscs-hmrcresponsewriter
       - caseworker-wa-task-configuration
+      - caseworker-ras-validation
 elastic:
   enabled: true
 
