--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -1,7 +1,7 @@
 #Pull request needs to have the pr-values:ccd label to deploy this stack.
 tags:
-  sscs-ccd-idam-pr: true
 
+  sscs-ccd-idam-pr: true
 java:
   image: ${IMAGE_NAME}
   memoryLimits: "8Gi"
@@ -10,34 +10,35 @@ java:
   cpuLimits: 2000m
   readinessDelay: 45
   environment:
-    PDF_API_URL: "http://rpe-pdf-service-aat.service.core-compute-aat.internal"
-    CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
-    DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
+    BULK_SCAN_URL: "http://sscs-bulk-scan-aat.service.core-compute-aat.internal"
     BUNDLE_URL: http://${SERVICE_NAME}-em-ccdorc
+    CCD_CALLBACK_ORCHESTRATOR_API_URL: http://${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     CCD_UI_BASE_URL: https://${SERVICE_NAME}-case-management-web
-    IDAM_S2S_AUTH: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-    IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
-    IDAM_OAUTH2_REDIRECT_URL: ${IDAM_OAUTH2_REDIRECT_URL}
+    CORE_CASE_DATA_API_URL: "http://ccd-data-store-api-aat.service.core-compute-aat.internal"
+    CORE_CASE_DATA_CASE_TYPE_ID: Benefit
+    CORE_CASE_DATA_JURISDICTION_ID: SSCS
+    CREATE_CCD_ENDPOINT: true
+    DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
     IDAM_API_JWK_URL: https://idam-api.aat.platform.hmcts.net/jwks
-    MANAGE_CASE_UI_BASE_URL: https://${SERVICE_NAME}-xui
+    IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
     IDAM_OAUTH2_CLIENT_ID: ${IDAM_OAUTH2_CLIENT_ID}
     IDAM_OAUTH2_CLIENT_SECRET: ${IDAM_OAUTH2_CLIENT_SECRET}
-    IDAM_S2S-AUTH_TOTP_SECRET: ${IDAM_S2S_AUTH_TOTP_SECRET}
+    IDAM_OAUTH2_REDIRECT_URL: ${IDAM_OAUTH2_REDIRECT_URL}
+    IDAM_S2S_AUTH: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
     IDAM_S2S-AUTH_MICROSERVICE: ${IDAM_S2S_AUTH_MICROSERVICE}
+    IDAM_S2S-AUTH_TOTP_SECRET: ${IDAM_S2S_AUTH_TOTP_SECRET}
     IDAM_SSCS_SYSTEMUPDATE_USER: ${IDAM_SSCS_SYSTEMUPDATE_USER}
     IDAM_SSCS_SYSTEMUPDATE_PASSWORD: ${IDAM_SSCS_SYSTEMUPDATE_PASSWORD}
-    CCD_CALLBACK_ORCHESTRATOR_API_URL: http://${SERVICE_NAME}-sscs-ccd-callback-orchestrator
-    CORE_CASE_DATA_JURISDICTION_ID: SSCS
-    CORE_CASE_DATA_CASE_TYPE_ID: Benefit
+    MANAGE_CASE_UI_BASE_URL: https://${SERVICE_NAME}-xui
+    PDF_API_URL: "http://rpe-pdf-service-aat.service.core-compute-aat.internal"
     TEST_URL: http://${SERVICE_NAME}
-    CREATE_CCD_ENDPOINT: true
+    ADJOURNMENT_FEATURE: true
     CASE_ACCESS_MANAGEMENT_FEATURE: true
-    WORK_ALLOCATION_FEATURE: true
-    SCHEDULE_LISTING_FEATURE: true
+    GAPS_SWITCHOVER_FEATURE: true
     POST_HEARINGS_FEATURE: true
     POST_HEARINGS_B_FEATURE: true
-    ADJOURNMENT_FEATURE: true
-    GAPS_SWITCHOVER_FEATURE: true
+    SCHEDULE_LISTING_FEATURE: true
+    WORK_ALLOCATION_FEATURE: true
     DUMMY: true
 
 idam-pr:
