--- a/.env
+++ b/.env
@@ -85,6 +85,15 @@ export JUDGE_PASSWORD=password
 export REGIONAL_CENTRE_ADMIN_USERNAME=regional-centre-admin@fake.hmcts.net
 export REGIONAL_CENTRE_ADMIN_PASSWORD=password
 
+export TRIBUNAL_MEMBER_1_USERNAME=tribunal-member-1@fake.hmcts.net
+export TRIBUNAL_MEMBER_1_PASSWORD=password
+
+export TRIBUNAL_MEMBER_2_USERNAME=tribunal-member-2@fake.hmcts.net
+export TRIBUNAL_MEMBER_2_PASSWORD=password
+
+export TRIBUNAL_MEMBER_3_USERNAME=tribunal-member-3@fake.hmcts.net
+export TRIBUNAL_MEMBER_3_PASSWORD=password
+
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
 
