turn off featue flags SSCS-11339

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -34,8 +34,8 @@ java:
     CASE_ACCESS_MANAGEMENT_FEATURE: true
     WORK_ALLOCATION_FEATURE: true
     SCHEDULE_LISTING_FEATURE: true
-    POST_HEARINGS_FEATURE: true
-    POST_HEARINGS_B_FEATURE: true
+    POST_HEARINGS_FEATURE: false
+    POST_HEARINGS_B_FEATURE: false
     ADJOURNMENT_FEATURE: true
     GAPS_SWITCHOVER_FEATURE: true
     DUMMY: true
