--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -32,11 +32,11 @@ java:
     TEST_URL: http://${SERVICE_NAME}
     CREATE_CCD_ENDPOINT: true
     CASE_ACCESS_MANAGEMENT_FEATURE: true
-    WORK_ALLOCATION_FEATURE: false
-    SCHEDULE_LISTING_FEATURE: false
-    POST_HEARINGS_FEATURE: false
-    POST_HEARINGS_B_FEATURE: false
-    ADJOURNMENT_FEATURE: false
+    WORK_ALLOCATION_FEATURE: true
+    SCHEDULE_LISTING_FEATURE: true
+    POST_HEARINGS_FEATURE: true
+    POST_HEARINGS_B_FEATURE: true
+    ADJOURNMENT_FEATURE: true
     GAPS_SWITCHOVER_FEATURE: true
     DUMMY: true
 
