--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -773,7 +773,7 @@ servicebus:
 
 postgresql:
   enabled: true
-  flexibleserver: sscs-flexibleserver-postgres-preview
+  flexibleserver: sscs-preview
   setup:
     databases:
     - name: data-store
