disable autoscaling on wa-case-event-handler preview deployment

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -973,6 +973,8 @@ wa-case-event-handler:
     ingressHost: wa-case-event-handler-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-wa-case-event-handler
     readinessDelay: 90
+    autoscaling:
+      enabled: false
     secrets:
       AZURE_SERVICE_BUS_CONNECTION_STRING:
         secretRef: sscs-sb-preview
