--- a/charts/sscs-tribunals-api/values.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.preview.template.yaml
@@ -3,7 +3,7 @@ java:
   ingressHost: ${SERVICE_FQDN}
   readinessDelay: 45
   autoscaling:
-    enabled: false
+    enabled: true
   environment:
     PDF_API_URL: "http://rpe-pdf-service-aat.service.core-compute-aat.internal"
     CORE_CASE_DATA_API_URL: "http://ccd-data-store-api-aat.service.core-compute-aat.internal"
